tests/snapshots/test_runner__tests__compiler__typecheck__record_wildcard_3__record_wildcard_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let x = { .. }; // Error: missing type annotation
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_wildcard_3/record_wildcard_3.kk:2:13
  │
2 │   let x = { .. }; // Error: missing type annotation
  │             ^^ Missing Type Annotation for Record Wildcard
  │
  = Without type annotation, the compiler cannot populate the properties automatically.
    Consider adding type annotation on the outer level to fix this problem.
